syntax = "proto3";
option go_package = "pkg/protocol/pb";
package pb;

import "google/protobuf/empty.proto";
import "business.ext.proto";

service BusinessInt{
  //权限校验
  rpc Auth (AuthReq) returns (google.protobuf.Empty);
  //获取用户信息
  rpc GetUser (GetUserReq) returns (GetUserResp);
  //批量获取用户信息
  rpc GetUsers (GetUsersReq) returns (GetUsersResp);
}

//鉴权请求
message AuthReq{
  int64 user_id  =1;                //用户id
  int64 device_id = 2;              //设备id
  string token = 3;                 //token
}

//批量获取用户信息请求
message GetUsersReq{
  map<int64 , int32> user_ids = 1;  //用户id
}

//批量获取用户信息响应
message GetUsersResp{
  map<int64,User> users = 1;        //用户信息
}
